# MiniOperationSystem

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  claude.md  docker-compose.yml  plan.md  project.md  rust-toolchain.toml  spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  learning_feedback.md
.github/workflows/: ci.yml
crates/common/: Cargo.toml  README.md
crates/common/src/: error.rs  id.rs  lib.rs  ringbuf.rs  traits.rs  types.rs
crates/common/src/traits/: device.rs  fs.rs  hal.rs  ipc.rs  memory.rs  process.rs  trace.rs  (+1 more)
crates/fs/: Cargo.toml
crates/fs/src/: fd.rs  lib.rs  procfs.rs  ramfs.rs  vfs.rs
crates/hal/: Cargo.toml
crates/hal/src/: cpu.rs  framebuffer.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  log.rs  pic.rs  serial.rs  vga.rs
crates/interrupt/: Cargo.toml
crates/ipc/: Cargo.toml  README.md
crates/ipc/src/: lib.rs  manager.rs  queue.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: main.rs
crates/memory/: Cargo.toml  README.md
crates/memory/src/: buddy.rs  frame.rs  heap.rs  lib.rs  paging.rs
crates/process/: Cargo.toml  README.md
crates/process/src/: context.rs  lib.rs  manager.rs  pcb.rs
crates/scheduler/: Cargo.toml  README.md
crates/scheduler/src/: fifo.rs  lib.rs  mlfq.rs  priority.rs  round_robin.rs
crates/shell/: Cargo.toml
crates/shell/src/: input.rs  lib.rs  parser.rs  shell.rs
crates/shell/src/commands/: alias.rs  basic.rs  bench.rs  compare.rs  crash.rs  dashboard.rs  debug_cmds.rs  env_cmds.rs  errors.rs  explain.rs  fs_cmds.rs  journey.rs  lab.rs  man.rs  mem_cmds.rs  mod.rs  proc_cmds.rs  quiz.rs  sched_cmds.rs  system.rs  text.rs  trace_cmds.rs  tutorial.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: dispatcher.rs  info.rs  io.rs  lib.rs  process.rs
crates/trace/: Cargo.toml  README.md
crates/trace-macros/: Cargo.toml
crates/trace-macros/src/: lib.rs
crates/trace/src/: context.rs  engine.rs  export.rs  guard.rs  lib.rs  macros.rs  null.rs  ringbuffer.rs  span.rs
docs/: README.md  comparison.md  user-testing-guide.md  web-integration-guide.md
docs/adr/: 000-template.md  001-use-rust-nightly.md  002-bootloader-api-crate.md  003-multi-crate-workspace.md
docs/audit/: v2.2.0-full-audit.md
docs/changelogs/: v0.1.0-changelog.md  v0.10.0-changelog.md  v0.11.0-changelog.md  v0.12.0-changelog.md  v0.13.0-changelog.md  v0.14.0-changelog.md  v0.15.0-changelog.md  v0.16.0-changelog.md  v0.18.0-changelog.md  v0.2.0-changelog.md  v0.20.0-changelog.md  v0.21.0-changelog.md  v0.23.0-changelog.md  v0.24.0-changelog.md  v0.3.0-changelog.md  v0.31.0-changelog.md  v0.33.0-changelog.md  v0.35.0-changelog.md  v0.4.0-changelog.md  v0.41.0-changelog.md  v0.43.0-changelog.md  v0.45.0-changelog.md  v0.5.0-changelog.md  v0.6.0-changelog.md  v0.7.0-changelog.md  v0.8.0-changelog.md  v0.9.0-changelog.md
docs/decisions/: pending-decisions.md
docs/dev-logs/: v0.1.0-insights.md  v0.1.0-tasks.md  v0.10.0-insights.md  v0.10.0-tasks.md  v0.11.0-insights.md  v0.11.0-tasks.md  v0.12.0-insights.md  v0.12.0-tasks.md  v0.13.0-insights.md  v0.13.0-tasks.md  v0.14.0-insights.md  v0.14.0-tasks.md  v0.15.0-insights.md  v0.15.0-tasks.md  v0.16.0-tasks.md  v0.17.0-insights.md  v0.17.0-tasks.md  v0.18.0-tasks.md  v0.19.0-tasks.md  v0.2.0-insights.md  v0.2.0-tasks.md  v0.20.0-tasks.md  v0.21.0-tasks.md  v0.22.0-insights.md  v0.22.0-tasks.md  v0.23.0-tasks.md  v0.24.0-tasks.md  v0.25.0-insights.md  v0.25.0-tasks.md  v0.26.0-insights.md  v0.26.0-tasks.md  v0.27.0-insights.md  v0.27.0-tasks.md  v0.28.0-insights.md  v0.28.0-tasks.md  v0.29.0-tasks.md  v0.3.0-insights.md  v0.3.0-tasks.md  v0.30.0-tasks.md  v0.31.0-tasks.md  (+36 more)
docs/progress/: cp01-report.md  cp10-report.md
docs/releases/: v0.1.0.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.19.0.md  v0.2.0-roadmap.md  v0.2.0.md  v0.29.0.md  v0.3.0-roadmap.md  v0.3.0.md  v0.30.0.md  v0.32.0.md  v0.34.0.md  v0.4.0-roadmap.md  v0.4.0.md  v0.42.0.md  v0.5.0-roadmap.md  v0.5.0.md  v0.6.0-roadmap.md  v0.6.0.md  v0.7.0-roadmap.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v2.0.0-vision.md
docs/risks/: risk-register.md
docs/tasks/: ITER-002-plan.md  ITER-002-result.md  ITER-003-result.md  ITER-004-to-023-roadmap.md  ITER-020-final-scoring.md  TASK-001-execution.md  v08-v27-iteration-plan.md  v28-v47-iteration-plan.md
scripts/: capture-trace.sh  docker-run.sh  hotspot-analysis.sh  integration-test.sh  release-check.sh  smoke-test.sh
tools/boot-image/: Cargo.toml
tools/boot-image/src/: main.rs
trace-viewer/: index.html
trace-viewer/css/: style.css
trace-viewer/js/: dashboard.js  main.js  parser.js  utils.js  waterfall.js
trace-viewer/sample/: sample-trace.json
