[workspace]
resolver = "2"
exclude = ["tools/boot-image"]
members = [
    "crates/common",
    "crates/hal",
    "crates/trace",
    "crates/trace-macros",
    "crates/memory",
    "crates/process",
    "crates/scheduler",
    "crates/fs",
    "crates/ipc",
    "crates/syscall",
    "crates/shell",
    "crates/kernel",
]

[workspace.dependencies]
spin = "0.9"
bitflags = "2"
volatile = "0.6"
x86_64 = "0.15"
uart_16550 = "0.3"
linked_list_allocator = "0.10"
conquer-once = "0.4"
bootloader_api = "0.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
