[package]
name = "minios-fs"
version = "0.1.0"
edition = "2021"
description = "VFS and filesystem drivers for MiniOS"

[dependencies]
minios-common = { path = "../common" }
minios-hal = { path = "../hal" }
minios-memory = { path = "../memory" }
minios-trace = { path = "../trace" }
spin = { workspace = true }
