[package]
name = "minios-process"
version = "0.1.0"
edition = "2021"
description = "Process and thread management for MiniOS"

[features]
default = ["hal"]
hal = ["dep:minios-hal"]

[dependencies]
minios-common = { path = "../common" }
minios-hal = { path = "../hal", optional = true }
spin = { workspace = true }
