[package]
name = "minios-trace"
version = "0.1.0"
edition = "2021"
description = "Trace engine with ring buffer storage for MiniOS"

[features]
default = ["hal"]
hal = ["dep:minios-hal"]

[dependencies]
minios-common = { path = "../common" }
minios-hal = { path = "../hal", optional = true }
spin = { workspace = true }
